syntax = "proto3";

package protocol;

option go_package = "github.com/EgorBessonov/TradingPlatform/TradeService/internal/tradeService";

service Trader{
  rpc OpenPosition(OpenPositionRequest) returns (OpenPositionResponse);
  rpc ClosePosition(ClosePositionRequest) returns (ClosePositionResponse);
}

message OpenPositionRequest{
  string user_id = 1;
  int32 share_type = 2;
  int32 count = 3;
  float price = 4;
  bool is_sale = 5;
  float take_profit = 6;
  float stop_loss = 7;
}

message OpenPositionResponse{
  string positionID = 1;
}

message ClosePositionRequest{
  string position_id = 1;
  string user_id = 2;
  float price = 3;
}

message ClosePositionResponse{
  string result = 1;
}